feat: update title in index.html and implement marker clustering in MapPage component

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1439a0da769c13dde3cf12b07193dbdc"
     ></script> -->
-    <title>Vite + React + TS</title>
+    <title>MOTP</title>
   </head>
   <body>
     <div id="root"></div>
